<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.main.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.dicodingevent.main.ui.upcoming.UpcomingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.dicodingevent.main.ui.finished.FinishedFragment"
        android:label="@string/finished"
        tools:layout="@layout/fragment_finished" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.dicodingevent.main.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.dicodingevent.main.ui.settings.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting"/>
</navigation>