<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.ui.settings.SettingFragment">

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingsTitle"
        app:layout_constraintStart_toStartOf="@+id/tvSettingsTitle"
        android:layout_marginTop="40dp"
        android:text="@string/dark_mode"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvEnableDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvDarkMode"
        app:layout_constraintTop_toBottomOf="@+id/tvDarkMode" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEnableDarkMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDarkMode" />

    <TextView
        android:id="@+id/tvDailyReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvSettingsTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvEnableDarkMode"
        android:layout_marginTop="16dp"
        android:text="@string/daily_reminder"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvEnableNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        app:layout_constraintStart_toStartOf="@+id/tvDailyReminder"
        app:layout_constraintTop_toBottomOf="@+id/tvDailyReminder"
        android:textSize="16sp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNotifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEnableNotifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDailyReminder" />


</androidx.constraintlayout.widget.ConstraintLayout>